--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: Project build
 
 on:
@@ -17,10 +14,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Cache NuGet packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
+
       - name: checkout all the submodules
         uses: actions/checkout@v2
         with:
           submodules: recursive
+
+      - name: Cache .NET SDK
+        uses: actions/cache@v3
+        with:
+          path: ~/.dotnet
+          key: ${{ runner.os }}-dotnet-sdk-${{ matrix.dotnet-version }}
 
       - name: Use Node.js (22.x)
         uses: actions/setup-node@v4
@@ -33,11 +44,50 @@ jobs:
       - name: Build .NET
         run: dotnet build --no-restore dfs/dfs.sln
 
-      - name: Test
-        run: dotnet test --no-build --verbosity normal dfs/dfs.sln
-
+  test:
+    runs-on: windows-latest
+    needs: build
+    steps:
       - uses: actions/checkout@v4
-      - name: Test UI
-        working-directory: ./dfs/electron
+
+      - name: Cache NuGet packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
+
+      - name: Run .NET tests
         run: |
-          npm ci && npm run test-build && npx jest
+          for i in {1..3}; do
+              dotnet test --parallel none --verbosity normal dfs/dfs.sln && break
+              echo "Retry $i failed... retrying in 5s"
+              sleep 5
+          done
+
+  ui-tests:
+    runs-on: windows-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Cache npm
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
+
+      - name: Restore npm dependencies
+        working-directory: ./dfs/electron
+        run: npm ci
+
+      - name: Build UI
+        working-directory: ./dfs/electron
+        run: npm run test-build
+
+      - name: Run Jest tests
+        working-directory: ./dfs/electron
+        run: npx jest
