--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -73,10 +73,11 @@ jobs:
           dotnet-coverage report --format cobertura --output ./coverage/coverage.xml
 
       - name: Upload .NET Coverage Report to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
         with:
           files: ./coverage/coverage.xml
           name: dotnet-coverage
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   # UI Test Job (Jest)
   ui-tests:
@@ -106,7 +107,8 @@ jobs:
         run: npx jest --coverage
 
       - name: Upload Jest Coverage Report to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
         with:
           files: ./dfs/electron/coverage/lcov-report/lcov-report.json
           name: jest-coverage
+          token: ${{ secrets.CODECOV_TOKEN }}
