--- a/codecov.yml
+++ b/codecov.yml
@@ -3,6 +3,6 @@ coverage:
     project: #add everything under here, more options at https://docs.codecov.com/docs/commit-status
       default:
         # basic
-        target: auto #default
+        target: 0.01% #default
         threshold: 0%
         base: auto 
