--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -57,6 +57,8 @@ jobs:
             # mandatory
             -Dsonar.projectKey=proj00_dfs
             -Dsonar.organization=proj00
+            -Dsonar.analysis.mode=publish
+            -Dsonar.sources=.
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # Comma-separated paths to directories containing test source files.
