--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,27 @@
+# Mandatory configuration: unique project key and organization
 sonar.projectKey=proj00_dfs
 sonar.organization=proj00
 
+# Optional: Name and version of the project
+# These are displayed in the SonarCloud UI and can help with tracking versions.
+sonar.projectName=dfs
+sonar.projectVersion=1.0
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=dfs
-#sonar.projectVersion=1.0
+# Define the source directories. In many cases, this will be the root directory or a subfolder like "src".
+# Adjust this to point to the correct source directory.
+sonar.sources=dfs
 
+# If you have tests, include them in the analysis.
+# For example, you can point to the "test" or "src/tests" directory.
+# If you are using a different folder structure, adjust the path as needed.
+#sonar.tests=src/test
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+# Optional: Include or exclude files from the analysis
+# For example, you can exclude all files from a "build" or "dist" directory.
+#sonar.exclusions=**/node_modules/**,**/build/**,**/dist/**
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# Specify the encoding of source files (default is UTF-8, but you can set it explicitly).
+sonar.sourceEncoding=UTF-8
+
+# Optional: For additional logging, enable verbose mode to help debug the analysis
+sonar.verbose=true
