--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -55,6 +55,7 @@ jobs:
           args:
             # Unique keys of your project and organization. You can find them in SonarCloud > Information (bottom-left menu)
             # mandatory
+            -Dproject.settings=./sonar-project.properties
             -Dsonar.projectKey=proj00_dfs
             -Dsonar.organization=proj00
             #-Dsonar.sources=dfs
