--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -58,6 +58,8 @@ jobs:
             -Dproject.settings=./sonar-project.properties
             -Dsonar.projectKey=proj00_dfs
             -Dsonar.organization=proj00
+            -Dsonar.analysis.scope=full
+            -Dsonar.forceAnalysis=true
             #-Dsonar.sources=dfs
             #-Dsonar.verbose=true
             # Comma-separated paths to directories containing main source files.
